--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/TaaniBravo/08-My-Portfolio#readme",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0"
   },
