Trying to fix Heroku issues.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Taani Maama - Portfolio",
+  "name": "Taani-Maama-Portfolio",
   "version": "1.0.0",
   "description": "Hello! I'm Taani Maama and this is my portfolio.",
   "main": "server.js",
